# www.syake.co.jp

./: .gitignore  README.md  corporation-profile.md  error.html  error.md  index.hamlet  index.html  info-syake-co-jp.cabal  package.json  package.yaml  release.md  s3-redirect-rule.xml  site.hs  web.cabal  www-syake-co-jp.cabal
favicon/: browserconfig.xml  manifest.json
game/: ghostus.md
game/ghostus/: download.md  index.md
release/: 1.md  2.md  2016-08-27.md  2016-09-26.md  3.md  4.md  5.md  6.md  7.md  index.hamlet
scss/: default.scss  ghostus.scss
templates/: default.hamlet  default.html  ghostus.hamlet  ghostus.html  release-list.hamlet  release-list.html  release-sidebar.html  release.hamlet  release.html  wrapper.hamlet  wrapper.html
