name:                info-syake-co-jp
version:             0.1.0.0
homepage:            https://github.com/Dan344/info.syake.co.jp#readme
maintainer:          info@syake.co.jp
author:              Syake
copyright:           Syake
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable site
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll
